--- a/Styles.css
+++ b/Styles.css
@@ -11,7 +11,7 @@
     justify-items: center;
     position: fixed;
     width: 100%;
-    margin-right: 50px; 
+    margin-right: 50px;
 }
 
 .caixa-principal {
@@ -104,7 +104,7 @@ section div p {
     margin-bottom: 50px;
 }
 
-.sobremim{
+.sobremim {
     padding-top: 80px;
     padding-bottom: 100px;
 }
@@ -172,6 +172,7 @@ section div button:hover {
     border-radius: 25px;
     cursor: pointer;
     text-decoration: none;
+
 }
 
 .card a:hover {
@@ -183,6 +184,7 @@ section div button:hover {
     display: flex;
     justify-content: space-around;
     margin-top: 80px;
+
 }
 
 footer {
@@ -227,3 +229,117 @@ footer p {
     transform: scale(1.3);
     transition: 0.5s;
 }
+
+@media (max-width: 700px) {
+    .menu {
+        display: flexbox;
+        width: 100vw;
+    }
+
+    .home {
+        display: none;
+    }
+
+    .portifolio {
+        font-size: 30px;
+
+    }
+
+    li {
+        font-size: 20px;
+        text-align: center;
+        text-align: center;
+    }
+
+    #sobre {
+        flex-direction: column;
+        height: 100vh;
+    }
+
+    .projeto {
+        display: block;
+        flex-direction: column;
+        text-align: center;
+        padding-top: 50px;
+        padding-bottom: 50px;
+
+    }
+
+    .card {
+
+        height: 335px;
+        width: 355px;
+        border-radius: 20px;
+        padding: 10px 15px;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 10px;
+    }
+
+    .card-projetos {
+        display: block;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .caixa-principal {
+        display: none;
+    }
+
+    .meu-nome {
+        font-size: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;
+        text-align: center;
+    }
+
+    .meu-nome h1 {
+        font-size: 40px;
+        margin-top: 20%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+
+
+    section img {
+        height: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+
+    .sobremim button{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;
+    }
+
+    .sobremim p {
+        display: none;
+    }
+
+
+    .sobremim h2 {
+        display: none;
+    }
+
+
+    .projeto h2 {
+        font-size: 40px;
+        align-items: center;
+    }
+
+    footer {
+
+        padding-top: 25px;
+        padding-bottom: 25px;
+
+    }
+
+}
+
+@media screen and (max-width: 1000px) {}
